--- a/src/index.scss
+++ b/src/index.scss
@@ -8,4 +8,5 @@
 body{
     background:rgb(21, 21, 63);
     overflow: hidden;
+    height: 100vh;
 }
